maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:15: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:19: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:23: error: reassignment to val
    cpt=cpt+1
       ^PledgeMaze:27: error: reassignment to val
  cpt=cpt-1
     ^